# UTMasterThesis_BayesianGWAS

./: .gitignore  README.md
Datasets/GSE2814/: check_pos.py  conv_csv.py  mk_struct.py  paper-link.txt  read_Z.py  read_responses.py
Docs/FastStrProof/: FastStrProof.tex  MyReferences.bib  Utilities.tex  VBProof.tex  VBUpdatingRules.tex  build.bat  chapter3.tex  clean.bat
MySTRUCTURE/: Makefile  MySTRUCTURE.sln  MySTRUCTURE.vcxproj  archive.sh
MySTRUCTURE/Admixture/: Admixture.vcxproj  Admixture.vcxproj.filters  main_admix.cpp
MySTRUCTURE/ExhMotahari/: ExhMotahari.vcxproj  ExhMotahari.vcxproj.filters  main_exh_motahari.cpp
MySTRUCTURE/FastSTRUCTURE/: CMakeLists.txt  FastSTRUCTURE.vcxproj  FastSTRUCTURE.vcxproj.filters  build.sh  plot_llbo.py  run.sh  vb_main.cpp
MySTRUCTURE/Libs/: Libs.vcxproj  Libs.vcxproj.filters  allele-frequencies.cpp  allele-frequencies.h  bit_genos_matrix.h  dists.cpp  dists.h  logger.cpp  logger.h  no-admix-params.cpp  no-admix-params.h  params.cpp  params.h  print-utils.cpp  print-utils.h
MySTRUCTURE/NoAdmixture/: NoAdmixture.vcxproj  NoAdmixture.vcxproj.filters  main_no_admix.cpp
MySTRUCTURE/UnitTests/: UnitTests.vcxproj  UnitTests.vcxproj.filters  main_unit_test.cpp
Python/Chi2Test/: main.py
Python/EM/: main1.py  main2.py
Python/LogisticRegression/: categorical.py  fit.py  gen_data.py  reg_fit.py  sigmoid_plot.py  sklearn_fit.py
Python/MultinomialEntropy/: main.py
Tools/: extraparams  run_beam.py  run_faststr.py  run_structure.py
Tools/CppMapper/BAMToGenotype/: CMakeLists.txt  Makefile  main-bam-to-genotype.cpp
(+131 files in other folders)
